--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NaviDoge</string>
     <string name="title_activity_demo">DemoActivity</string>
+    <string name="title_activity_search">SearchActivity</string>
 </resources>
